--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 </head>
 
 <body>
-    <!--########################### Header Starts Here ###################### -->
     <div class="home-screen container-fluid">
         <div class="home-cover">
             <div id="menu-jk" class="header">
@@ -53,8 +52,8 @@
                     </div>
                     <div class="col-md-7 animated bounceInRight homexp">
                         <h5>Olá Sou </h5>
-                        <h2>Erick Bruno</h2>
-                        <span> <a>Desenvolvedor De SoftWare</a> </span>
+                        <h2>Erick B. P. dos Santos</h2>
+                        <span> <a>Desenvolvedor de Software</a> </span>
                         <ul class="socil-icon">
 
                             <li>
@@ -79,7 +78,6 @@
         </div>
     </div>
 
-    <!--########################### About US Starts Here ###################### -->
 
     <div id="about_us" class="about-us container-fluid">
         <div class="container">
@@ -91,13 +89,9 @@
                     <img src="assets/images/foto2.png" alt="" width="140" height="350">
                 </div>
                 <div class="detail-col col-md-8">
-                    <h2>Erick Bruno Pq Dos Santos</h2>
+                    <h2>Erick B. P. dos Santos</h2>
                     <h6>Programador Java</h6>
-                    <p>Graduado em Análise e Desenvolvimento de Sistemas, com certificação em Arquitetura de Software
-                        para Web e especialização em Java. Meu foco profissional está em desenvolver soluções web
-                        robustas e escaláveis, utilizando tecnologias modernas como Java Spring. Estou comprometido em
-                        aplicar meu conhecimento e habilidades para contribuir significativamente para projetos de
-                        software inovadores</p>
+                    <p>Sou graduado em Análise e Desenvolvimento de Sistemas, possuo certificação em Arquitetura de Software para Web e uma especialização em Java. Minha expertise profissional está centrada no desenvolvimento de soluções web robustas e escaláveis, fazendo uso de tecnologias modernas como Java SpringBoot. Comprometo-me a aplicar meu conhecimento e habilidades para contribuir significativamente em projetos de software inovadores</p>
 
                 </div>
 
@@ -108,13 +102,12 @@
 
     </div>
 
-    <!--########################### Services Starts Here ###################### -->
 
     <div id="services" class="services container-fluid">
         <div class="container">
             <div class="session-title row">
                 <h2>Serviços</h2>
-                <p>"Transformando ideias em código, e desafios em soluções."
+                <p>Transformando ideias em código, e desafios em soluções
                 </p>
             </div>
             <div class="services-row row">
@@ -123,13 +116,13 @@
                     <div class="service-card">
                         <i class="fas fa-desktop"></i>
                         <h4>Desenvolvimento De SoftWare </h4>
-                        <p>Oferecemos serviços especializados em Desenvolvimento de Software por Encomenda, onde cada solução é personalizada para atender às necessidades exclusivas de nossos clientes.</p>
+                        <p>Oferecemos serviços especializados em Desenvolvimento de Software por Encomenda, onde cada solução é personalizada para atender às necessidades exclusivas de nossos clientes</p>
                     </div>
                 </div>
 
                 <div class="col-md-4 seric-div">
                     <div class="service-card">
-                        <i class="fas fa-desktop"></i>
+                        <i class="fas fa-page4"></i>
                         <h4>Criação de site </h4>
                         <p>Oferecemos serviços de criação de sites personalizados para impulsionar a presença online da sua empresa</p>
                     </div>
@@ -139,7 +132,6 @@
         </div>
     </div>
 
-    <!--########################### Skills Starts Here ###################### -->
 
     <div id="skills" class="skills container-fluid">
         <div class="row">
