--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-md-7 animated bounceInRight homexp">
                         <h5>Olá Sou </h5>
-                        <h2>Erick B. P. dos Santos</h2>
+                        <h2>Erick Bruno</h2>
                         <span> <a>Desenvolvedor de Software</a> </span>
                         <ul class="socil-icon">
 
@@ -87,13 +87,13 @@
                 <h2>Sobre Mim</h2>
             </div>
             <div class="about-row row">
-                <div class="image-col col-md-4">
-                    <img src="assets/images/foto2.png" alt="" width="140" height="350">
+                <div class="image-col col-md-4" >
+                    <img  src="assets/images/perfil.png" alt="" width="140" height="350">
                 </div>
                 <div class="detail-col col-md-8">
-                    <h2>Erick B. P. dos Santos</h2>
+                    <h2>Erick Bruno</h2>
                     <h6>Programador Java</h6>
-                    <p>Sou graduado em Análise e Desenvolvimento de Sistemas, possuo certificação em Arquitetura de
+                    <p >Sou graduado em Análise e Desenvolvimento de Sistemas, possuo certificação em Arquitetura de
                         Software para Web e uma especialização em Java. Minha expertise profissional está centrada no
                         desenvolvimento de soluções web robustas e escaláveis, fazendo uso de tecnologias modernas como
                         Java SpringBoot. Comprometo-me a aplicar meu conhecimento e habilidades para contribuir
@@ -111,6 +111,7 @@
 
     <div id="services" class="services container-fluid">
         <div class="container">
+           
             <div class="session-title row">
                 <h2>Serviços</h2>
                 <p>Transformando ideias em código, e desafios em soluções
@@ -165,14 +166,14 @@
                         </div>
                     </li>
                     <li>
-                        <label for="">Java Server Faces</label>
+                        <label for="">Java Server Faces / PrimeFaces</label>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" style="width: 55%"
                                 aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </li>
                     <li>
-                        <label for="">Java Server Pages</label>
+                        <label for="">Java Server Pages / Servlet</label>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" style="width: 65%"
                                 aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
@@ -180,7 +181,7 @@
                     </li>
 
                     <li>
-                        <label for="">Servlets</label>
+                        <label for="">Html Css JavaScript</label>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" style="width: 65%"
                                 aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
@@ -254,7 +255,6 @@
                     <a href="https://www.linkedin.com/in/erick-bruno/"><img  src="/assets/images/icones/linkedin.png" alt=""></a>
                     <a href="https://wa.me/5584987084306?text=%F0%9F%91%8B+Ol%C3%A1%21+Como+posso+ajudar%3F+%F0%9F%91%8B"><img  src="/assets/images/icones/whatsapp.png" alt=""></a>
                     <a href="mailto:erickjava1991@outlook.com?subject=&body="><img  src="/assets/images/icones/email.png" alt=""></a>
-
                 </span>
                 <br/>
                 <a href="">Copyright © erick-soudev | Todos os direitos reservados. a erick bruno </a>
