--- a/index.html
+++ b/index.html
@@ -84,20 +84,21 @@
     <div id="about_us" class="about-us container-fluid">
         <div class="container">
             <div class="session-title row">
-                <h2>Sobre Mim</h2>
+                <h2>Um Pouco Sobre Mim</h2>
             </div>
             <div class="about-row row">
                 <div class="image-col col-md-4" >
                     <img  src="assets/images/perfil.png" alt="" width="140" height="350">
                 </div>
                 <div class="detail-col col-md-8">
-                    <h2>Erick Bruno</h2>
                     <h6>Programador Java</h6>
                     <p >Sou graduado em Análise e Desenvolvimento de Sistemas, possuo certificação em Arquitetura de
                         Software para Web e uma especialização em Java. Minha expertise profissional está centrada no
                         desenvolvimento de soluções web robustas e escaláveis, fazendo uso de tecnologias modernas como
                         Java SpringBoot. Comprometo-me a aplicar meu conhecimento e habilidades para contribuir
                         significativamente em projetos de software inovadores</p>
+                        <hr>
+                        <a href="https://drive.google.com/file/d/1XlIRbZcKOHm7ZRPtuoRG3ThkjPcbYnup/view?usp=sharing" id="link-cv">Dowmload-CV</a>
 
                 </div>
 
