--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
             <div class="col-md-6 skii-div tech-skill">
                 <div class="title">
                     <h2>Tecnologias</h2>
-                    <p>Principais Tecnologias</p>
                 </div>
 
                 <ul>
@@ -160,7 +159,15 @@
                         </div>
                     </li>
                     <li>
-                        <label for="">SpringBoot</label>
+                        <label for="">SpringBoot Rest Api</label>
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 75%"
+                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <label for="">SpringBoot MVC &  Thymeleaf</label>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" style="width: 75%"
                                 aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -181,13 +188,7 @@
                         </div>
                     </li>
 
-                    <li>
-                        <label for="">Html Css JavaScript</label>
-                        <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 65%"
-                                aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </li>
+                  
 
                     <li>
                         <label for="">Sql/PostGresql</label>
@@ -210,7 +211,6 @@
             <div class="col-md-6 skii-div pro-skill">
                 <div class="title">
                     <h2>Ferramentas</h2>
-                    <p>Principais Ferramentas</p>
                 </div>
                 <ul>
                     <li>
@@ -256,6 +256,8 @@
                     <a href="https://www.linkedin.com/in/erick-bruno/"><img  src="/assets/images/icones/linkedin.png" alt=""></a>
                     <a href="https://wa.me/5584987084306?text=%F0%9F%91%8B+Ol%C3%A1%21+Como+posso+ajudar%3F+%F0%9F%91%8B"><img  src="/assets/images/icones/whatsapp.png" alt=""></a>
                     <a href="mailto:erickjava1991@outlook.com?subject=&body="><img  src="/assets/images/icones/email.png" alt=""></a>
+                    <a href="https://github.com/Erick-SouDev"><img  src="/assets/images/icones/github.png" alt=""></a>
+
                 </span>
                 <br/>
                 <a href="">Copyright © erick-soudev | Todos os direitos reservados. a erick bruno </a>
