--- a/index.html
+++ b/index.html
@@ -92,11 +92,7 @@
                 </div>
                 <div class="detail-col col-md-8">
                     <h6>Programador Java</h6>
-                    <p >Sou graduado em Análise e Desenvolvimento de Sistemas, possuo certificação em Arquitetura de
-                        Software para Web e uma especialização em Java. Minha expertise profissional está centrada no
-                        desenvolvimento de soluções web robustas e escaláveis, fazendo uso de tecnologias modernas como
-                        Java SpringBoot. Comprometo-me a aplicar meu conhecimento e habilidades para contribuir
-                        significativamente em projetos de software inovadores</p>
+                    <p >Sou graduado em "Análise e Desenvovimento de Sistemas" com experiência prática adquirida em projetos pessoais, durante o meu tempo de estudo, foquei em criar sistemas web utilizando Spring Boot e implementando arquiteturas MVC (Model-View-Controller), além de desenvolver REST APIs e utilizar Git para versionamento de código. Também adquiri conhecimentos em conteinerização com Docker, buscando sempre aprender mais e enfrentar novos desafios para me tornar um profissional qualificado e contribuir de forma significativa para o desenvolvimento de software.</p>
                         <hr>
                         <a href="https://drive.google.com/file/d/1HIeyUG8GBalkv92PY5cg0D1LcTS0q3yU/view?usp=sharing" id="link-cv">Dowmload-CV</a>
 
