--- a/index.html
+++ b/index.html
@@ -86,12 +86,10 @@
                 <h2>Um Pouco Sobre Mim</h2>
             </div>
             <div class="about-row row">
-                <div class="image-col col-md-4" >
-                    <img  src="assets/images/perfil.png" alt="" width="140" height="350">
-                </div>
+               
                 <div class="detail-col col-md-8">
                     <h6>Programador Java</h6>
-                    <p >Sou graduado em "Análise e Desenvovimento de Sistemas" com experiência prática adquirida em projetos pessoais, durante o meu tempo de estudo, foquei em criar sistemas web utilizando Spring Boot e implementando arquiteturas MVC (Model-View-Controller), além de desenvolver REST APIs e utilizar Git para versionamento de código. Também adquiri conhecimentos em conteinerização com Docker, buscando sempre aprender mais e enfrentar novos desafios para me tornar um profissional qualificado e contribuir de forma significativa para o desenvolvimento de software.</p>
+                    <p >Graduado em Análise e Desenvolvimento de Sistemas e especializado em Spring Boot, possuo sólida experiência em projetos pessoais com tecnologia Java, desde a arquitetura monolítica até o atual foco em SpringBoot, adquiri conhecimentos abrangentes, incluindo Servlet, JSP e JSF. Atualmente, aplico os princípios de MVC e Rest API , em meus projetos pessoais.</p>
                         <hr>
                         <a href="https://drive.google.com/file/d/1kJ24p7e00yqNPaIr3BqqlyIA8-Z82e-A/view?usp=sharing" id="link-cv">Dowmload-CV</a>
 
